{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 14,
  "lineage": "8d5e3e1e-221c-010c-eb1d-5777182ff58c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgsnet2association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-inf-01/subnets/snet-eus-inf-ad-01",
            "network_security_group_id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/networkSecurityGroups/nsg-eus-inf-snet-ad-01",
            "subnet_id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-inf-01/subnets/snet-eus-inf-ad-01"
          },
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet",
            "module.nsgsnet2.azurerm_network_security_group.nsgsnet",
            "module.snet2.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgsnet3association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-inf-01/subnets/snet-eus-inf-mgmt-01",
            "network_security_group_id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/networkSecurityGroups/nsg-eus-inf-snet-mgmt-01",
            "subnet_id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-inf-01/subnets/snet-eus-inf-mgmt-01"
          },
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet",
            "module.nsgsnet3.azurerm_network_security_group.nsgsnet",
            "module.snet3.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsgsnet2",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgsnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/networkSecurityGroups/nsg-eus-inf-snet-ad-01",
            "location": "eastus",
            "name": "nsg-eus-inf-snet-ad-01",
            "resource_group_name": "rg-eus-inf-01",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet",
            "module.snet2.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsgsnet3",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgsnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/networkSecurityGroups/nsg-eus-inf-snet-mgmt-01",
            "location": "eastus",
            "name": "nsg-eus-inf-snet-mgmt-01",
            "resource_group_name": "rg-eus-inf-01",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet",
            "module.snet3.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.snet1",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.25.0.0/26",
            "address_prefixes": [
              "172.25.0.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-inf-01/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "rg-eus-inf-01",
            "virtual_network_name": "vnet-eus-inf-01"
          },
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.snet2",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.25.0.64/28",
            "address_prefixes": [
              "172.25.0.64/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-inf-01/subnets/snet-eus-inf-ad-01",
            "name": "snet-eus-inf-ad-01",
            "resource_group_name": "rg-eus-inf-01",
            "virtual_network_name": "vnet-eus-inf-01"
          },
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.snet3",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.25.0.80/28",
            "address_prefixes": [
              "172.25.0.80/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-inf-01/subnets/snet-eus-inf-mgmt-01",
            "name": "snet-eus-inf-mgmt-01",
            "resource_group_name": "rg-eus-inf-01",
            "virtual_network_name": "vnet-eus-inf-01"
          },
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.snet4",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.25.0.128/26",
            "address_prefixes": [
              "172.25.0.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-inf-01/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "rg-eus-inf-01",
            "virtual_network_name": "vnet-eus-inf-01"
          },
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.25.0.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9e0db8e7-f1ef-43e0-9fdb-c0bca4d37ea4",
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-inf-01",
            "location": "eastus",
            "name": "vnet-eus-inf-01",
            "resource_group_name": "rg-eus-inf-01",
            "subnet": [
              {
                "address_prefix": "172.25.0.0/26",
                "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-inf-01/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "172.25.0.64/28",
                "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-inf-01/subnets/snet-eus-inf-ad-01",
                "name": "snet-eus-inf-ad-01",
                "security_group": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/networkSecurityGroups/nsg-eus-inf-snet-ad-01"
              },
              {
                "address_prefix": "172.25.0.80/28",
                "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-inf-01/subnets/snet-eus-inf-mgmt-01",
                "name": "snet-eus-inf-mgmt-01",
                "security_group": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-inf-01/providers/Microsoft.Network/networkSecurityGroups/nsg-eus-inf-snet-mgmt-01"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet"
          ]
        }
      ]
    }
  ]
}